Add CSS Grid layout

--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>GeneriX Hospital</title>
-    <link rel="stylesheet" href="style.css">
-</head>
 <body>
 
-<header>
+<header class="header">
     <h1>GeneriX Hospital</h1>
     <p>Modern Creative Healthcare</p>
 </header>
 
-<main>
-    <p>This is my ITP102 Prelim Lab Activity 2 project.</p>
+<main class="main">
+    <section class="content">
+        <h2>About Us</h2>
+        <p>
+            GeneriX is a modern hospital providing innovative and
+            compassionate healthcare services.
+        </p>
+        <button class="btn">Learn More</button>
+    </section>
+
+    <aside class="sidebar">
+        <h2>Our Mission</h2>
+        <p>
+            To deliver quality healthcare with creativity and technology.
+        </p>
+    </aside>
 </main>
 
-<footer>
+<footer class="footer">
     <p>© 2026 GeneriX Hospital</p>
 </footer>
 
 </body>
-</html>
