Fix CSS connection

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <body>
 
 <header class="header">
+    <link rel="stylesheet" href="style.css">
     <h1>GeneriX Hospital</h1>
     <p>Modern Creative Healthcare</p>
 </header>
